# backend_to_do_list

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md
src/backend_to_do_list/: config.py  main.py
src/backend_to_do_list/model/: schemas.py
src/backend_to_do_list/services/: sqlite.py
